# Time-Series-Methods

./: .gitignore  AQI-Ozone-Model-Fit-Weekly.ipynb  LICENSE  README.md  __init__.py  accuracy.py  aggregator.py  avg_ts.py  conf_int.py  data_counter.py  dickey_fuller.py  eacf.py  evaluator.py  forecast_sarimax.py  k_fold_model.py  k_folds_split.py  pyproject.toml  refactor_sarimax_fit.py  shapiro_wilk.py
my_sarimax/: evaluator.py  forecaster.py  kfold_fit.py  model_namer.py
plot/: box_whisker.py  colors.py  density.py  heatmap.py  plot.py  plot_k_folds.py  rolling.py  seasonal.py  ts_quick_plots.py
plot/autocorr_plots/: side_by_side.py  stacked.py
scale/: data_scaler.py  std_scaler.py
src/time_series_methods/: __init__.py  accuracy.py  aggregator.py  avg_ts.py  conf_int.py  data_counter.py  k_folds_split.py
src/time_series_methods/my_sarimax/: evaluator.py  forecaster.py  kfold_fit.py  model_namer.py
src/time_series_methods/plot/: box_whisker.py  colors.py  density.py  heatmap.py  plot_k_folds.py  rolling.py  seasonal.py  ts_quick_plots.py
src/time_series_methods/plot/autocorr_plots/: side_by_side.py  stacked.py
src/time_series_methods/scale/: data_scaler.py
src/time_series_methods/specialized/: avg_ts.py
src/time_series_methods/tests/: dickey_fuller.py  eacf.py  shapiro_wilk.py
ts_methods/: __init__.py  dickey_fuller.py
